// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block parseBlockCode 1`] = `
"<template><view><template></template></view></template>
  <script>
  export default {}
  </script>
  <style></style>
  "
`;

exports[`block parseBlockCode 2`] = `
"<template><view><template v-if="a">a</template><template v-else>b</template></view></template>
  <script>
  export default {}
  </script>
  <style></style>
  "
`;
